<resources>
    <string name="app_name">Party Game</string>
    <string name="party">Party</string>
    <string name="fun">Fun</string>
    <string name="dirty">Dirty</string>
    <string name="settings">Settings</string>
    <string name="game_rule_title">Instruction</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">русский язык</string>
    <string name="spanish" translatable="false">español</string>
    <string name="portuguese" translatable="false">Português</string>
    <string name="german" translatable="false">Deutsche</string>
    <string name="french" translatable="false">français</string>
    <string name="japanese" translatable="false">日本人</string>
    <string name="available_language">Available languages</string>
    <string name="lang_english">English</string>
    <string name="lang_russian">Russian</string>
    <string name="lang_spanish">Spanish</string>
    <string name="lang_portuguese">Portuguese</string>
    <string name="lang_german">German</string>
    <string name="lang_french">French</string>
    <string name="lang_japanese">Japanese</string>
    <string name="lang_english_abbr" translatable="false">en</string>
    <string name="lang_russian_abbr" translatable="false">ru</string>
    <string name="lang_spanish_abbr" translatable="false">es</string>
    <string name="lang_portuguese_abbr" translatable="false">pt</string>
    <string name="lang_german_abbr" translatable="false">de</string>
    <string name="lang_french_abbr" translatable="false">fr</string>
    <string name="lang_japanese_abbr" translatable="false">ja</string>
    <string name="account_settings">Account settings</string>
    <string name="language">Language</string>
    <string name="instruction">Instruction</string>
    <string name="how_to_play_the_game">How to play the game</string>
    <string name="drinking_roulette">Drinking Roulette</string>
    <string name="never_have_i_ever_menu">Never Have I Ever</string>
    <string name="select_game">SELECT GAME</string>
    <string name="funny_neve_have_i_ever_1">quit drinking more than twice.</string>
    <string name="funny_neve_have_i_ever_2">peed in a pool.</string>
    <string name="funny_neve_have_i_ever_3">said I was going to go somewhere with no absolutely no intention of actually going.</string>
    <string name="funny_neve_have_i_ever_4">challenged an animal to a fight.</string>
    <string name="funny_neve_have_i_ever_5">been kicked out of a bar.</string>
    <string name="funny_neve_have_i_ever_6">used the bathroom in complete darkness.</string>
    <string name="funny_neve_have_i_ever_7">been chased by a dog.</string>
    <string name="funny_neve_have_i_ever_8">worn Crocs.</string>
    <string name="funny_neve_have_i_ever_9">gotten a tattoo I regret.</string>
    <string name="funny_neve_have_i_ever_10">called in sick but wasn’t.</string>
    <string name="funny_neve_have_i_ever_11">kissed an animal.</string>
    <string name="funny_neve_have_i_ever_12">farted in an elevator and pretended it was not me.</string>
    <string name="funny_neve_have_i_ever_13">eaten my own bugger.</string>
    <string name="funny_neve_have_i_ever_14">re-gifted.</string>
    <string name="funny_neve_have_i_ever_15">worn a Broken Watch for style.</string>
    <string name="funny_neve_have_i_ever_16">spent more than $50 on underwear.</string>
    <string name="funny_neve_have_i_ever_17">pulled a push door.</string>
    <string name="funny_neve_have_i_ever_18">used the bathroom in complete darkness.</string>
    <string name="funny_neve_have_i_ever_19">spilled pen ink in my pocket.</string>
    <string name="funny_neve_have_i_ever_20">given someone a black eye.</string>
    <string name="funny_neve_have_i_ever_21">done something I thought I would never do.</string>
    <string name="funny_neve_have_i_ever_22">been invited to a threesome.</string>
    <string name="funny_neve_have_i_ever_23">swam naked in someone else\'s pool.</string>
    <string name="funny_neve_have_i_ever_24">gotten drunk playing games like this.</string>
    <string name="funny_neve_have_i_ever_25">kicked a masseuse during a massage by mistake.</string>
    <string name="funny_neve_have_i_ever_26">woken up someone with my snoring.</string>
    <string name="funny_neve_have_i_ever_27">farted while squatting in the gym.</string>
    <string name="funny_neve_have_i_ever_28">pranked my parents.</string>
    <string name="funny_neve_have_i_ever_29">tried weed.</string>
    <string name="funny_neve_have_i_ever_30">driven a car naked.</string>
    <string name="funny_neve_have_i_ever_31">been trapped in an elevator.</string>
    <string name="funny_neve_have_i_ever_32">sang at karaoke.</string>
    <string name="funny_neve_have_i_ever_33">used the 5 second rule for food that fell.</string>
    <string name="funny_neve_have_i_ever_34">dropped my phone in the toilet.</string>
    <string name="funny_neve_have_i_ever_35">woken up with bruises and not know how they got there.</string>
    <string name="funny_neve_have_i_ever_36">kissed a stranger.</string>
    <string name="funny_neve_have_i_ever_37">not cleaned my teeth for over 48 hrs.</string>
    <string name="funny_neve_have_i_ever_38">dyed my hair the wrong color!</string>
    <string name="funny_neve_have_i_ever_39">sang out loud in a friends shower.</string>
    <string name="funny_neve_have_i_ever_40">been locked in a room.</string>
    <string name="funny_neve_have_i_ever_41">dropped a phone on my face.</string>
    <string name="funny_neve_have_i_ever_42">been chased by a cat.</string>
    <string name="dirty_neve_have_i_ever_1">taken a sexy selfie.</string>
    <string name="dirty_neve_have_i_ever_2">rainbow kissed.</string>
    <string name="dirty_neve_have_i_ever_3">sent a dirty text to the wrong person.</string>
    <string name="dirty_neve_have_i_ever_4">had a one night stand.</string>
    <string name="dirty_neve_have_i_ever_5">done it in the sea.</string>
    <string name="dirty_neve_have_i_ever_6">shaved my partner’s pubic hair.</string>
    <string name="dirty_neve_have_i_ever_7">kissed a celebrity.</string>
    <string name="dirty_neve_have_i_ever_8">put a thumb in it.</string>
    <string name="dirty_neve_have_i_ever_9">abandoned my baby mama.</string>
    <string name="dirty_neve_have_i_ever_10">tasted myself.</string>
    <string name="dirty_neve_have_i_ever_11">watched a friend (do it).</string>
    <string name="dirty_neve_have_i_ever_12">cheated.</string>
    <string name="dirty_neve_have_i_ever_13">done it while a family member was in the same room.</string>
    <string name="dirty_neve_have_i_ever_14">touched myself to a Youtube video.</string>
    <string name="dirty_neve_have_i_ever_15">had to use lubrication.</string>
    <string name="dirty_neve_have_i_ever_16">had to fake it.</string>
    <string name="dirty_neve_have_i_ever_17">tossed the salad.</string>
    <string name="dirty_neve_have_i_ever_18">Squirted.</string>
    <string name="dirty_neve_have_i_ever_19">flashed a bartender for a free drink.</string>
    <string name="dirty_neve_have_i_ever_20">done it in a public place.</string>
    <string name="dirty_neve_have_i_ever_21">been in handcuffs, for any reason.</string>
    <string name="dirty_neve_have_i_ever_22">done it on my period.</string>
    <string name="dirty_neve_have_i_ever_23">licked food off someone.</string>
    <string name="dirty_neve_have_i_ever_24">done it on a kitchen counter.</string>
    <string name="dirty_neve_have_i_ever_25">been with someone 10 inches or longer.</string>
    <string name="dirty_neve_have_i_ever_26">showered with the same sex.</string>
    <string name="dirty_neve_have_i_ever_27">slept with twins.</string>
    <string name="dirty_neve_have_i_ever_28">caught my parents doing it.</string>
    <string name="dirty_neve_have_i_ever_29">been choked.</string>
    <string name="dirty_neve_have_i_ever_30">stalked an ex online.</string>
    <string name="dirty_neve_have_i_ever_31">sucked my partners toes.</string>
    <string name="dirty_neve_have_i_ever_32">screwed around in an elevator.</string>
    <string name="dirty_neve_have_i_ever_33">slept with someone within an hour of meeting them.</string>
    <string name="dirty_neve_have_i_ever_34">had an STD.</string>
    <string name="dirty_neve_have_i_ever_35">given/received a lap dance.</string>
    <string name="dirty_neve_have_i_ever_36">required medical attention due to a foreign object stuck inside my body.</string>
    <string name="dirty_neve_have_i_ever_37">been upset with a partner for not performing well.</string>
    <string name="dirty_neve_have_i_ever_38">used a friends pleasure toys.</string>
    <string name="dirty_neve_have_i_ever_39">sent someone a picture of my stuff.</string>
    <string name="party_neve_have_i_ever_1">been kicked out of a bar</string>
    <string name="party_neve_have_i_ever_2">thrown up and swallow it</string>
    <string name="party_neve_have_i_ever_3">Skinny Dipped</string>
    <string name="party_neve_have_i_ever_4">taken the morning after pill</string>
    <string name="party_neve_have_i_ever_5">driven through red lights</string>
    <string name="party_neve_have_i_ever_6">stalked my Ex</string>
    <string name="party_neve_have_i_ever_7">checked through my phone media to remember the night before</string>
    <string name="party_neve_have_i_ever_8">farted in an elevator and pretended it was not me</string>
    <string name="party_neve_have_i_ever_9">put a thumb in it</string>
    <string name="party_neve_have_i_ever_10">had a sugar daddy</string>
    <string name="party_neve_have_i_ever_11">went to work without bathing</string>
    <string name="party_neve_have_i_ever_12">created an Instagram just to stalk people</string>
    <string name="party_neve_have_i_ever_13">accepted a drop from total strangers</string>
    <string name="party_neve_have_i_ever_14">eaten raw fish</string>
    <string name="party_neve_have_i_ever_15">tasted myself</string>
    <string name="party_neve_have_i_ever_16">watched a friend (do it)</string>
    <string name="party_neve_have_i_ever_17">done it with a family member in the same building.</string>
    <string name="party_neve_have_i_ever_18">felt like killing someone.</string>
    <string name="party_neve_have_i_ever_19">had a treehouse.</string>
    <string name="party_neve_have_i_ever_20">eaten earwax.</string>
    <string name="please_select_card_ntype_to_start_playing">Please select card  type to start playing.</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_add">add</string>
    <string name="dialog_hint_enter_player_name">Enter player name</string>
    <string name="dialog_title_add_player">Add Player</string>
    <string name="add_more_team">Please add more team players.</string>
    <string name="add_team">Please add team members to play the game.</string>
    <string name="drink_roulette_q1">Who’s the most scandalous person you’ve had sex with?</string>
    <string name="drink_roulette_q2">What’s the most embarrassing thing you’ve ever done while drunk?</string>
    <string name="drink_roulette_q3">What’s the closest you’ve ever come to cheating?</string>
    <string name="drink_roulette_q4">What’s the biggest age difference you’ve had between yourself and a sexual partner?</string>
    <string name="drink_roulette_q5">What’s the #1 thing you would never want your parents to find out about you?</string>
    <string name="drink_roulette_q6">What’s the most embarrassing thing you’ve ever been caught doing?</string>
    <string name="drink_roulette_q7">What’s the most scandalous location you’ve had sex in?</string>
    <string name="drink_roulette_q8">What’s your most outrageous sexual fantasy?</string>
    <string name="drink_roulette_q9">What’s the biggest lie you’ve ever told a significant other?</string>
</resources>