<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <RelativeLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_chevron_white" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/horizontal_margin_8"
                android:text="@string/account_settings"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator" />

            <LinearLayout
                android:id="@+id/layout_current_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_8"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language" />

                <TextView
                    android:id="@+id/lbl_current_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/horizontal_margin_8"
                android:text="@string/instruction"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator" />

            <LinearLayout
                android:id="@+id/btn_settings_game_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_8"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_play_the_game"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
