<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/vertical_margin_4"
                        android:layout_marginEnd="@dimen/vertical_margin_4"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/dialog_title_add_player"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="@dimen/vertical_margin_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_player_name"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_bg_curved_grey_light"
                            android:cursorVisible="true"
                            android:gravity="center|start|bottom"
                            android:hint="@string/dialog_hint_enter_player_name"
                            android:padding="@dimen/vertical_margin_12"
                            android:inputType="textVisiblePassword|textNoSuggestions"
                            android:maxLength="40"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/btn_dialog_repeat_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/btn_cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/mater_grey_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_dialog_repeat_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/btn_add"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
