<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_shade"
        android:gravity="center"
        android:text="@string/select_game"
        android:textColor="#3f51b5"
        android:textSize="40sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_drinking_roulette"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_drink_roulette" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arka_solid"
                android:textColor="@color/white"
                android:text="@string/drinking_roulette"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_never_have_i_ever"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/dark_gray"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/ic_never" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arka_solid"
                android:textColor="@color/white"
                android:text="@string/never_have_i_ever_menu"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

