<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/btn_party"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_party_fun"
                    app:civ_border_color="#3f51b5"
                    app:civ_border_width="2dp"
                    app:civ_shadow_color="#3f51b5"
                    app:civ_shadow_radius="10dp" />

                <ImageView
                    android:id="@+id/btn_party_selected"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_selected" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_bold"
                android:gravity="center_horizontal"
                android:text="@string/party"
                android:textColor="@color/mater_grey_900" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/btn_fun"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_party_normal"
                    app:civ_border_color="#3f51b5"
                    app:civ_border_width="2dp"
                    app:civ_shadow_color="#3f51b5"
                    app:civ_shadow_radius="10dp" />

                <ImageView
                    android:id="@+id/btn_fun_selected"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_selected" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_bold"
                android:gravity="center_horizontal"
                android:text="@string/fun"
                android:textColor="@color/mater_grey_900" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/btn_dirty"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_party_dirty"
                    app:civ_border_color="#3f51b5"
                    app:civ_border_width="2dp"
                    app:civ_shadow_color="#3f51b5"
                    app:civ_shadow_radius="10dp" />

                <ImageView
                    android:id="@+id/btn_dirty_selected"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_selected" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_bold"
                android:gravity="center_horizontal"
                android:text="@string/dirty"
                android:textColor="@color/mater_grey_900" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_container"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:fontFamily="@font/lemon_jelly"
        android:gravity="center"
        android:text="@string/never_have_i_ever"
        android:textColor="#3f51b5"
        android:textSize="40sp" />

    <com.mindorks.placeholderview.SwipePlaceHolderView
        android:id="@+id/cards_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_text" />

</RelativeLayout>

